mobile banner fixed but still not showing fully

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3016,8 +3016,17 @@ a.bld-link{text-decoration: none; color: #fff;}
     }
 
     .list-header {
-        margin-top: -185px;
-        padding: 155px 0;
+        margin-top: 0px;
+        height: 100px;
+        padding: 85px 0;
+        background-position: center;
+        /* background-repeat: no-repeat; */
+        background-size: cover;
+        position: relative;
+    }
+    .menu-section {
+       
+        padding: 3px;
     }
 
     .city_select {
